force-app/main/default/objects/Announcement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Academic_Program</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Educational_Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Announcements</relationshipLabel>
        <relationshipName>Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Off__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Off</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dismissable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dismissable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Grade_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Program Grade Level the Announcement should be displayed for.</description>
        <inlineHelpText>The Program Grade Level the Announcement should be displayed for.</inlineHelpText>
        <label>Program Grade Level</label>
        <referenceTo>Program_Grade_Level__c</referenceTo>
        <relationshipLabel>Announcements</relationshipLabel>
        <relationshipName>Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Announcement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Alert_Type__c</columns>
        <columns>Body__c</columns>
        <columns>Date_On__c</columns>
        <columns>Date_Off__c</columns>
        <columns>Account__c</columns>
        <columns>Program_Grade_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_OR_Program_Grade_Level</fullName>
        <active>true</active>
        <description>User may only populate the Account OR Program Grade Level, not both</description>
        <errorConditionFormula>AND(Account__c != NULL, Program_Grade_Level__c != NULL)</errorConditionFormula>
        <errorMessage>Account and Program Grade Level are both populated, please remove one. Announcements may only be created for either an Account OR a Program Grade Level, not both.</errorMessage>
    </validationRules>
</CustomObject>