force-app/main/default/objects/Announcement__c/validationRules/Account_OR_Program_Grade_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_OR_Program_Grade_Level</fullName>
    <active>true</active>
    <description>User may only populate the Account OR Program Grade Level, not both</description>
    <errorConditionFormula>AND(Account__c != NULL, Program_Grade_Level__c != NULL)</errorConditionFormula>
    <errorMessage>Account and Program Grade Level are both populated, please remove one. Announcements may only be created for either an Account OR a Program Grade Level, not both.</errorMessage>
</ValidationRule>