force-app/main/default/objects/Announcement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alert_Type__c</columns>
    <columns>Body__c</columns>
    <columns>Date_On__c</columns>
    <columns>Date_Off__c</columns>
    <columns>Account__c</columns>
    <columns>Program_Grade_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>